VP 10.3.0 Changelog
------------------------

- DirectX 8 port for input handling (currently disabled)

VP 10.2.0 Changelog
------------------------

- add -Help (displays all command line parameters) and -DisableTrueFullscreen (force disables/overrides the true fullscreen video preference) to command line

- by default open file dialog to directly select and play a table (can be changed in preferences->editor options)

- timers now feature a special mode (setting the interval to -1) that triggers a timer exactly once per frame (e.g. dependent on the FPS that a user gets for a table).
  this can also be interpreted as being a callback done once per frame to update everything that is only rendering-related (e.g. to reduce overhead caused by things that will never be seen by the player in the end).
  note that all purely script-driven animations that use a timer with its interval set to -1 should use the new script function GameTime to calculate the time passed between the previous and current frame to make animations time dependent again.
- fix timers that dis/enable themselves in the script

- disable visual touch/pen feedback to save one frame of input latency/lag (on tablets/phones)

- replace old 'Maximum pre-rendered frames' video preference implementation with the official DirectX mechanism on non-XP systems,
  so it could be worth to experiment again with this setting by using 1 or 2 to reduce lag at the price of a bit of performance

- add aspect ratio to dimension manager

- add show debugger hot key option to the keys preferences. If hot key is pressed it opens the debugger window without showing the pause menu.

- Lights can be debugged (and also live tweaked) in the debugger. Open the debugger, click on the "Lights" button and a new dialog will appear where all dynamic values are editable. Properties like blinking/on/off are