@@ -1831,8 +1831,8 @@ typedef [uuid(D09B9F0E-C1AE-40dd-84D6-B1F74053AA8E)]
                 [propput, id(6), helpstring("property Y")] HRESULT Y([in] float newVal);
                 [propget, id(7), helpstring("property Open")] HRESULT Open([out, retval] VARIANT_BOOL *pVal);
                 [propput, id(7), helpstring("property Open")] HRESULT Open([in] VARIANT_BOOL newVal);
-                [propget, id(13), helpstring("property AntiFriction")] HRESULT AntiFriction([out, retval] float *pVal);
-                [propput, id(13), helpstring("property AntiFriction")] HRESULT AntiFriction([in] float newVal);
+                [propget, id(13), helpstring("property Damping")] HRESULT Damping([out, retval] float *pVal);
+                [propput, id(13), helpstring("property Damping")] HRESULT Damping([in] float newVal);
 
                 [id(2147), helpstring("method Move")] HRESULT Move(int dir, [defaultvalue(0)] float speed, [defaultvalue(0)] float angle);
 
@@ -1906,8 +1906,8 @@ typedef [uuid(D09B9F0E-C1AE-40dd-84D6-B1F74053AA8E)]
                 [propput, id(4), helpstring("property Rotation")] HRESULT Rotation([in] float newVal);
                 [propget, id(5), helpstring("property Height")] HRESULT Height([out, retval] float *pVal);
                 [propput, id(5), helpstring("property Height")] HRESULT Height([in] float newVal);
-                [propget, id(7), helpstring("property AntiFriction")] HRESULT AntiFriction([out, retval] float *pVal);
-                [propput, id(7), helpstring("property AntiFriction")] HRESULT AntiFriction([in] float newVal);
+                [propget, id(7), helpstring("property Damping")] HRESULT Damping([out, retval] float *pVal);
+                [propput, id(7), helpstring("property Damping")] HRESULT Damping([in] float newVal);
                 [propget, id(DISPID_Image), helpstring("property Image")] HRESULT Image([out, retval] BSTR *pVal);
                 [propput, id(DISPID_Image), helpstring("property Image")] HRESULT Image([in] BSTR newVal);
                 [propget, id(340), helpstring("property Material")] HRESULT Material([out, retval] BSTR *pVal);
