@@ -1185,7 +1185,7 @@ STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     EDITTEXT        7,47,7,44,12,ES_AUTOHSCROLL
-    LTEXT           "Anti&Friction",-1,7,9,38,8
+    LTEXT           "Damping",-1,7,9,38,8
 END
 
 IDD_PROPRAMP_PHYSICS DIALOGEX 0, 0, 125, 141
@@ -1662,7 +1662,7 @@ BEGIN
     CONTROL         "",IDC_TWO_WAY_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,52,63,9,10
     LTEXT           "Two Way",IDC_STATIC,7,63,32,8
     EDITTEXT        13,74,35,44,12,ES_AUTOHSCROLL
-    LTEXT           "Anti&Friction",IDC_STATIC,7,37,38,8
+    LTEXT           "Damping",IDC_STATIC,7,37,38,8
 END
 
 IDD_DEBUGGER DIALOGEX 0, 0, 347, 214
